{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 77,
  "lineage": "e18f686b-4e66-39ca-b71d-f04853e566a4",
  "resources": [
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:internet-gateway/igw-0d0bdcbac6c2a0e9b",
            "id": "igw-0d0bdcbac6c2a0e9b",
            "owner_id": "941434651743",
            "tags": {
              "Name": "igw_vpc-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "igw_vpc-aws_security_01-dev-virginia"
            },
            "vpc_id": "vpc-017d1281553a3f88c"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:route-table/rtb-0c2fdb4ff07d60c4c",
            "id": "rtb-0c2fdb4ff07d60c4c",
            "owner_id": "941434651743",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0bdcbac6c2a0e9b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_crt-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Public_crt-aws_security_01-dev-virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-017d1281553a3f88c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_internet_gateway.igw",
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0833880131f4d2f2b",
            "route_table_id": "rtb-0c2fdb4ff07d60c4c",
            "subnet_id": "subnet-02257ba4e23877989"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_internet_gateway.igw",
            "module.vpc_us_east_1.aws_route_table.public_crt",
            "module.vpc_us_east_1.aws_subnet.public_subnet",
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group/sg-0d60a4294ec8aef91",
            "description": "Private Subnet Security Group",
            "egress": [],
            "id": "sg-0d60a4294ec8aef91",
            "ingress": [],
            "name": "Public Private SG-aws_security_01-dev-virginia",
            "name_prefix": "",
            "owner_id": "941434651743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Subnet SG-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Private Subnet SG-aws_security_01-dev-virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-017d1281553a3f88c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group/sg-02f0d625ba677a9c5",
            "description": "Public Subnet Security Group",
            "egress": [],
            "id": "sg-02f0d625ba677a9c5",
            "ingress": [],
            "name": "Public Subnet SG-aws_security_01-dev-virginia",
            "name_prefix": "",
            "owner_id": "941434651743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Subnet SG-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Public Subnet SG-aws_security_01-dev-virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-017d1281553a3f88c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:subnet/subnet-0ff76263243794563",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff76263243794563",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941434651743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Private_Subnet-aws_security_01-dev-virginia"
            },
            "vpc_id": "vpc-017d1281553a3f88c"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:subnet/subnet-02257ba4e23877989",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02257ba4e23877989",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941434651743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Public_Subnet-aws_security_01-dev-virginia"
            },
            "vpc_id": "vpc-017d1281553a3f88c"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:vpc/vpc-017d1281553a3f88c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07257bf685a105fbc",
            "default_route_table_id": "rtb-0fa036e0bdb54d05c",
            "default_security_group_id": "sg-0765a62e86a4960b3",
            "dhcp_options_id": "dopt-072044fe87e8f819f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017d1281553a3f88c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa036e0bdb54d05c",
            "owner_id": "941434651743",
            "tags": {
              "Name": "VPC-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "VPC-aws_security_01-dev-virginia"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_egress_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-09a1e08e0b48aa7ea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09a1e08e0b48aa7ea",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02f0d625ba677a9c5",
            "security_group_rule_id": "sgr-09a1e08e0b48aa7ea",
            "tags": {
              "Name": "Allow all ipv4 traffic to every whare egress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Allow all ipv4 traffic to every whare egress rule-aws_security_01-dev-virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_security_group.sg_public_subnet",
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_to_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-009d0d86f3df06944",
            "cidr_ipv4": "10.1.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-009d0d86f3df06944",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d60a4294ec8aef91",
            "security_group_rule_id": "sgr-009d0d86f3df06944",
            "tags": {
              "Name": "Allow all traffic from public subnet egress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Allow all traffic from public subnet egress rule-aws_security_01-dev-virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_security_group.sg_private_subnet",
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_ingress_traffic_in_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-01ad89fb0d15f5e02",
            "cidr_ipv4": "10.1.2.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01ad89fb0d15f5e02",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02f0d625ba677a9c5",
            "security_group_rule_id": "sgr-01ad89fb0d15f5e02",
            "tags": {
              "Name": "Allow all ipv4 traffic from private subnet ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Allow all ipv4 traffic from private subnet ingress rule-aws_security_01-dev-virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_security_group.sg_public_subnet",
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_from_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-0bf1c071109432919",
            "cidr_ipv4": "10.1.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bf1c071109432919",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d60a4294ec8aef91",
            "security_group_rule_id": "sgr-0bf1c071109432919",
            "tags": {
              "Name": "Allow all traffic from public subnet ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Allow all traffic from public subnet ingress rule-aws_security_01-dev-virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_security_group.sg_private_subnet",
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ingress_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-0f429f2a99a9d65b7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f429f2a99a9d65b7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02f0d625ba677a9c5",
            "security_group_rule_id": "sgr-0f429f2a99a9d65b7",
            "tags": {
              "Name": "Allow SSH traffic from sg_ingress_cidr ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Allow SSH traffic from sg_ingress_cidr ingress rule-aws_security_01-dev-virginia"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_security_group.sg_public_subnet",
            "module.vpc_us_east_1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:internet-gateway/igw-0d425c4489672b22a",
            "id": "igw-0d425c4489672b22a",
            "owner_id": "941434651743",
            "tags": {
              "Name": "igw_vpc-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "igw_vpc-aws_security_01-dev-virginia"
            },
            "vpc_id": "vpc-0815e5fce7ac0f41b"
          },
          "dependencies": [
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:route-table/rtb-0194cb848d2dcdedd",
            "id": "rtb-0194cb848d2dcdedd",
            "owner_id": "941434651743",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d425c4489672b22a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_crt-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Public_crt-aws_security_01-dev-virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0815e5fce7ac0f41b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_west_2.aws_internet_gateway.igw",
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04486f852bac2b82e",
            "route_table_id": "rtb-0194cb848d2dcdedd",
            "subnet_id": "subnet-010554a813390a3a6"
          },
          "dependencies": [
            "module.vpc_us_west_2.aws_internet_gateway.igw",
            "module.vpc_us_west_2.aws_route_table.public_crt",
            "module.vpc_us_west_2.aws_subnet.public_subnet",
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:security-group/sg-03a38a8ed2228be3c",
            "description": "Private Subnet Security Group",
            "egress": [],
            "id": "sg-03a38a8ed2228be3c",
            "ingress": [],
            "name": "Public Private SG-aws_security_01-dev-virginia",
            "name_prefix": "",
            "owner_id": "941434651743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Subnet SG-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Private Subnet SG-aws_security_01-dev-virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0815e5fce7ac0f41b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:security-group/sg-0fd3680fc38abf587",
            "description": "Public Subnet Security Group",
            "egress": [],
            "id": "sg-0fd3680fc38abf587",
            "ingress": [],
            "name": "Public Subnet SG-aws_security_01-dev-virginia",
            "name_prefix": "",
            "owner_id": "941434651743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Subnet SG-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Public Subnet SG-aws_security_01-dev-virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0815e5fce7ac0f41b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:subnet/subnet-0831b3a676e36f1e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0831b3a676e36f1e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941434651743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Private_Subnet-aws_security_01-dev-virginia"
            },
            "vpc_id": "vpc-0815e5fce7ac0f41b"
          },
          "dependencies": [
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:subnet/subnet-010554a813390a3a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010554a813390a3a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941434651743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Public_Subnet-aws_security_01-dev-virginia"
            },
            "vpc_id": "vpc-0815e5fce7ac0f41b"
          },
          "dependencies": [
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:vpc/vpc-0815e5fce7ac0f41b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05182ae474368b3b3",
            "default_route_table_id": "rtb-0708bbce9e10a4670",
            "default_security_group_id": "sg-0aa533c0dc97a4ce7",
            "dhcp_options_id": "dopt-05d70a2e489a73618",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0815e5fce7ac0f41b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0708bbce9e10a4670",
            "owner_id": "941434651743",
            "tags": {
              "Name": "VPC-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "VPC-aws_security_01-dev-virginia"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_egress_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:security-group-rule/sgr-0f03a895e82284daa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f03a895e82284daa",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd3680fc38abf587",
            "security_group_rule_id": "sgr-0f03a895e82284daa",
            "tags": {
              "Name": "Allow all ipv4 traffic to every whare egress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Allow all ipv4 traffic to every whare egress rule-aws_security_01-dev-virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_west_2.aws_security_group.sg_public_subnet",
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_to_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:security-group-rule/sgr-0e1f4b3022edb6a14",
            "cidr_ipv4": "10.1.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e1f4b3022edb6a14",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03a38a8ed2228be3c",
            "security_group_rule_id": "sgr-0e1f4b3022edb6a14",
            "tags": {
              "Name": "Allow all traffic from public subnet egress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Allow all traffic from public subnet egress rule-aws_security_01-dev-virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_west_2.aws_security_group.sg_private_subnet",
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_ingress_traffic_in_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:security-group-rule/sgr-0125dd254ff784326",
            "cidr_ipv4": "10.1.2.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0125dd254ff784326",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd3680fc38abf587",
            "security_group_rule_id": "sgr-0125dd254ff784326",
            "tags": {
              "Name": "Allow all ipv4 traffic from private subnet ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Allow all ipv4 traffic from private subnet ingress rule-aws_security_01-dev-virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_west_2.aws_security_group.sg_public_subnet",
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_from_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:security-group-rule/sgr-0067eeb28f2347e01",
            "cidr_ipv4": "10.1.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0067eeb28f2347e01",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03a38a8ed2228be3c",
            "security_group_rule_id": "sgr-0067eeb28f2347e01",
            "tags": {
              "Name": "Allow all traffic from public subnet ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Allow all traffic from public subnet ingress rule-aws_security_01-dev-virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_west_2.aws_security_group.sg_private_subnet",
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_west_2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ingress_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941434651743:security-group-rule/sgr-07f910c8005a44322",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07f910c8005a44322",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fd3680fc38abf587",
            "security_group_rule_id": "sgr-07f910c8005a44322",
            "tags": {
              "Name": "Allow SSH traffic from sg_ingress_cidr ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "Name": "Allow SSH traffic from sg_ingress_cidr ingress rule-aws_security_01-dev-virginia"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_west_2.aws_security_group.sg_public_subnet",
            "module.vpc_us_west_2.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}